--- a/config/default.cfg
+++ b/config/default.cfg
@@ -23,7 +23,8 @@ cfg$model <- "main.gms"   #def = "main.gms"
 
 # which input data sets should be used?
 
-cfg$input <- c("isimip_rcp-IPSL_CM5A_LR-rcp2p6-co2_rev48_c200_690d3718e151be1b450b394c1064b1c5.tgz",
+
+cfg$input <- c("isimip_rcp-IPSL_CM5A_LR-rcp2p6-co2_rev49_c200_690d3718e151be1b450b394c1064b1c5.tgz",
          "rev4.52_h12_magpie.tgz",
          "rev4.52_h12_validation.tgz",
          "calibration_H12_c200_26Feb20.tgz",
@@ -223,6 +224,10 @@ cfg$gms$c14_yields_scenario  <- "nocc"   # def = "nocc"
 # * and 1 (pasture yields increase linearily with tau)
 # * only used in biocorrect realization
 cfg$gms$s14_yld_past_switch <- 0.25           # def = 0.25
+
+#Switch on yield decrease "factor" or produce control run "normal"
+cfg$gms$s14_yld_dcrs_switch <- "factor"       # def = "factor"
+
 
 # ***---------------------    15_food    ---------------------------------------
 # * (anthropometrics_jan18): estimates food using scenario dependent regression
