--- a/config/default.cfg
+++ b/config/default.cfg
@@ -225,8 +225,8 @@ cfg$gms$c14_yields_scenario  <- "nocc"   # def = "nocc"
 # * only used in biocorrect realization
 cfg$gms$s14_yld_past_switch <- 0.25           # def = 0.25
 
-#Switch on yield decrease "factor" or produce control run "normal"
-cfg$gms$s14_yld_dcrs_switch <- "factor"       # def = "factor"
+#Switch on yield decrease "cc" or produce control run "normal"
+cfg$gms$s14_yld_dcrs_switch <- "normal"       # def = "cc"
 
 
 # ***---------------------    15_food    ---------------------------------------
