--- a/config/default.cfg
+++ b/config/default.cfg
@@ -212,7 +212,7 @@ cfg$gms$c13_tccost <- "medium"
 # * (biocorrect): cropland TC applied on pasture yields
 # * (dynamic_aug18): pasture yields increase based on exogenuous demand-side proxy
 # * 		     for growth rate of cattle stocks
-cfg$gms$yields <- "dynamic_labour_okt18"          # def = dynamic_aug18
+cfg$gms$yields <- "dynamic_aug18"          # def = dynamic_aug18
 
 # * yield scenario
 # *   options:   cc  (climate change)
@@ -226,7 +226,7 @@ cfg$gms$c14_yields_scenario  <- "nocc"   # def = "nocc"
 cfg$gms$s14_yld_past_switch <- 0.25           # def = 0.25
 
 #Switch on yield decrease "cc" or produce control run "normal"
-cfg$gms$s14_yld_dcrs_switch <- "normal"       # def = "cc"
+cfg$gms$c14_yld_dcrs_switch <- "normal"       # def = "normal"
 
 
 # ***---------------------    15_food    ---------------------------------------
@@ -527,7 +527,11 @@ cfg$gms$c35_aolc_policy <- "npi"              # def = "npi"
 # * (fixed_per_ton_mar18): factor costs fixed per ton
 # * (mixed_feb17):         reimplementation of MAgPIE 3.0 default
 # * (sticky_feb18)         factor costs including investments in capital
-cfg$gms$factor_costs <- "mixed_feb17"        # default = mixed_feb17
+cfg$gms$factor_costs <- "mixed_labour_okt20"        # default = mixed_feb17
+
+
+#Switch on cost increase from labour prod "cc" or produce control run "normal"
+cfg$gms$c38_labour_switch <- "normal"       # def = "normal"
 
 # ***---------------------    39_landconversion    -----------------------------
 # * (global_static_aug18): global static land conversion costs for establishment
