factor costs cc impacts on labour update

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -530,8 +530,8 @@ cfg$gms$c35_aolc_policy <- "npi"              # def = "npi"
 cfg$gms$factor_costs <- "mixed_labour_okt20"        # default = mixed_feb17
 
 
-#Switch on cost increase from labour prod "cc" or produce control run "normal"
-cfg$gms$c38_labour_switch <- "normal"       # def = "normal"
+#Switch on cost increase from labour prod "cc" or produce control run "nocc"
+cfg$gms$c38_labour_switch <- "nocc"       # def = "nocc"
 
 # ***---------------------    39_landconversion    -----------------------------
 # * (global_static_aug18): global static land conversion costs for establishment
